clusters/k3s/apps/minecraft/lobby/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lobby
spec:
  selector:
    matchLabels:
      app: lobby
  serviceName: "lobby"
  replicas: 1
  template:
    metadata:
      labels:
        app: lobby
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: lobby
        image: itzg/minecraft-server:latest
        tty: true
        stdin: true
        ports:
        - containerPort: 25565
          name: minecraft
        volumeMounts:
        - mountPath: /data
          name: data
        readinessProbe:
          exec:
            command:
            - mc-health
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - mc-health
          initialDelaySeconds: 60
          periodSeconds: 15
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: local-path
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
