clusters/k3s/apps/minecraft/lobby/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lobby
spec:
  selector:
    app: lobby
  type: ClusterIP
  ports:
  - name: minecraft
    protocol: TCP
    port: 25565
    targetPort: 25565
