clusters/k3s/apps/minecraft/lobby/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lobby-ktulu
spec:
  ingressClassName: traefik
  rules:
  - host: ktulu.devcw.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lobby
            port:
              number: 8332
  tls:
  - hosts:
    - ktulu.devcw.xyz
